# rs-play

./: .gitignore  README.md
a1hello/: Cargo.toml
a2basetype/src/: main.rs
a3ownership/: Cargo.toml  readme.md
a3ownership/src/: main.rs
a3ownership2/: Cargo.toml  readme.md
a3ownership2/src/: main.rs
ahello/: Cargo.toml  readme.md
ahello/src/: main.rs
baseic/a10match/: Cargo.toml
baseic/a10match/src/: main.rs
baseic/a1hello/src/: main.rs
baseic/a2basetype/: Cargo.toml
baseic/a2basetype/src/: main.rs
baseic/a3ownership/: readme.md
baseic/a3ownership2/: readme.md
baseic/a3ownership2/src/: main.rs
baseic/a4string/: Cargo.toml  readme.md
baseic/a4string/src/: main.rs
baseic/a5tup/: Cargo.toml  readme.md
baseic/a5tup/src/: main.rs
baseic/a6struct/: Cargo.toml  readme.md
baseic/a6struct/src/: main.rs
baseic/a7enum/: Cargo.toml
baseic/a7enum/src/: a2_enum.rs  a_options.rs  main.rs
baseic/a8array/: Cargo.toml
baseic/a8array/src/: main.rs
baseic/a9fllow/: Cargo.toml  readme.md
baseic/a9fllow/src/: main.rs
c1basic/a1method/: Cargo.toml  readme.md
c1basic/a1method/src/: main.rs
c1basic/a2generic1/: Cargo.toml
c1basic/a2generic1/src/: add.rs  const.rs  main.rs  point.rs  test_large.rs
c1basic/a3trait1/: Cargo.toml  readme.md
c1basic/a3trait1/src/: a1summary.rs  a2traitbound.rs  a3largest.rs  a4file.rs  default_demo.rs  main.rs
c1basic/a3trait2/: Cargo.toml  readme.md
c1basic/a3trait2/src/: advance.rs  advance2.rs  advance3.rs  advance4.rs  bird.rs  main.rs  safe_trait.rs  screen.rs
c1basic/a4collection/: Cargo.toml
c1basic/a4collection/src/: main.rs  vec1.rs  vec2.rs
c1basic/a5lifetime1/: Cargo.toml  readme.md
c1basic/a5lifetime1/src/: l1.rs  l2.rs  main.rs
c1basic/a6error/: Cargo.toml
c1basic/a6error/src/: err1.rs  main.rs
c1basic/a7package/: readme.md
c1basic/a7package/p1-hello/: Cargo.toml  readme.md
c1basic/a7package/p1-mod-t1/: Cargo.toml
c2demo/minigrep/: readme.md
c2demo/minigrep/src/: lib.rs  main.rs
c3base/a1closure/: Cargo.toml
c3base/a2iterator/: Cargo.toml
c3base/a3type/: Cargo.toml
c3base/a4pointer/: Cargo.toml  readme.md
c3base/a5thread/: Cargo.toml
c3base/a6err/: Cargo.toml
c3base/a7_future/: Cargo.toml
c3base/a7async/: Cargo.toml
c3base/a8_pin/: Cargo.toml  readme.md
c3base/a8zweb/: 404.html  Cargo.toml  hello.html
c3base/a9atokio/: Cargo.toml
c3base/a9atokio/example/: a1s.rs  a2s.md  a2s.rs  a3mpsc.rs  a4rw.rs  test.md
c3base/a9atokio/src/: main.rs
c3base/a9redis/: Cargo.toml
c3base/a9redis/examples/: a2-hello-redis.rs  a3-hello-redis.md  a3-hello-redis.rs  hello-redis.rs  readme.md
z1_project/a1db/: Cargo.toml  README.md
z1_project/a1db/examples/: hyper1.rs  reqwest1.rs  to.rs
(+52 files in other folders)
