[package]
name = "a9redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
mini-redis = "0.4.1"
bytes = "1.5.0"

[[example]]
name = "a1-hello-redis"
path = "examples/a1-hello-redis.rs"

[[example]]
name = "a2-hello-redis"
path = "examples/a2-hello-redis.rs"


[[example]]
name = "a3-hello-redis"
path = "examples/a3-hello-redis.rs"
