[package]
name = "a1db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
taplo = "0.13.0"

[[example]]
name = "sqlite1"
path = "examples/sqlite1"

[[example]]
name = "hyper1"
path = "examples/hyper1"

[[example]]
name = "reqwest1"
path = "examples/reqwest1"
